deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service 
spec:
  selector: 
    app.kubernetes.io/instance: simple-app
  ports:
  - port: 8080
    targetPort: 8080
