deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-app
  labels:
    app: simple-app-service
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: simple-app-service
    weight: 100
